--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -126,6 +126,7 @@ noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
 noUserFound=Nessun utente trovato
 
+err_duplicateSerial=Matricola già esistente
 
 err_shareTableValues=Le quote non sono corrette
 err_shareTableValues_detail=Le quote non sono corrette (la somma supera 100)
