--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -128,12 +128,9 @@ noUserFound=Nessun utente trovato
 
 err_duplicateSerial=Matricola già esistente
 
-err_shareTableValues=Le quote non sono corrette
-err_shareTableValues_detail=Le quote non sono corrette (la somma supera 100)
-err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
-err_shareTableGoods_detail=Le quote di "Beni e servizi" non sono corrette (la somma supera 100)
-err_shareTablePersonnel=Le quote del personale non sono corrette
-err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somma è diversa da 100)
+err_shareTableValues=Le quote non sono corrette (la somma supera 100)
+err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette (la somma supera 100) 
+err_shareTablePersonnel=Le quote del personale non sono corrette (la somma è diversa da 100)
 
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quello delle altre rate supera l'importo della convenzione)
