inst share table layout

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -101,6 +101,8 @@ shareTableRentals=Noleggi
 shareTableContrPersonnel=Personale a contratto
 shareTableOtherCosts=Altri costi
 
+shareTableGoodsValues=Quote di "Beni e servizi"
+
 newInst=Creazione di una nuova rata
 
 newInstDate=Data
