--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -20,7 +20,9 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
 	  Per riempire questo campo, bisogna scegliere il responsabile dal rispettivo menù a tendina. 
 	  Se l'utente non è presente all'interno della lista, è possibile crearne uno nuovo cliccando su "Aggiungi".
 	\item Il referente
-	\item La dittà
+	\item La dittà\\
+	   Per riempire questo campo, bisogna scegliere il responsabile dal rispettivo menù a tendina. 
+	  Se l'utente non è presente all'interno della lista, è possibile crearne uno nuovo cliccando su "Aggiungi".
 	\item Il nome del progetto CIA
 	\item Il Repertorio
 	\item Il totale imponibile
