--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -168,6 +168,7 @@ login=Login
 user=Utente
 role=Ruolo
 email=Email
+profile=Profilo
 create_agreement=Crea una convenzione
 create_funding=Crea un contributo
 view_contracts=Visualizza i contratti
