--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -165,6 +165,7 @@ invalidFile=File non valido
 
 serialNumber=Matricola
 password=Password
+password_old=Vecchia password
 confirmPassword=Password di verifica
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
@@ -173,6 +174,8 @@ login=Login
 user=Utente
 role=Ruolo
 email=Email
+password=Password
+password_confirm=Password di conferma
 profile=Profilo
 create_agreement=Crea una convenzione
 create_funding=Crea un contributo
@@ -180,5 +183,9 @@ view_contracts=Visualizza i contratti
 view_deadlines=Visualizza lo scadenzario
 create_user=Aggiungi un utente
 view_users=Visualizza l'elenco degli utenti
+personalData=Dati personali
 
 userWiz_header=Creazione di un utente
+userProfile_header=Dati Personali
+changePassword_header=Cambia la tua password
+changePassword_button=Cambia password
