minor changes and fixes

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -166,7 +166,7 @@ invalidFile=File non valido
 serialNumber=Matricola
 password=Password
 password_old=Vecchia password
-confirmPassword=Password di verifica
+confirmPassword=Verifica password
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
 login_welcome=Benvenuto in Jama
@@ -174,7 +174,6 @@ login=Login
 user=Utente
 role=Ruolo
 email=Email
-password=Password
 password_confirm=Password di conferma
 profile=Profilo
 create_agreement=Crea una convenzione
