--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,10pt]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
+\usepackage{graphicx}
 
 % Title Page
 \title{Analisi e sviluppo di una web application \\
@@ -20,7 +21,7 @@ per l'amministrazione di attività di trasferimento tecnologico}
 
 \chapter{Introduzione}
 \chapter{Analisi}
-\section{Casi d'Uso}
+\section{Casi d'uso}
 \input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
