--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -1,15 +1,22 @@
-Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che interagisce col sistema.
+Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che interagisce col sistema. Una rappresentazione grafica è disponibile in figura \ref{use_case_diag}
+\begin{figure}[h]
+  \caption{Diagramma dei casi d'uso}
+  \label{use_case_diag}
+  \centering
+    \includegraphics[width=1\textwidth]{images/casi_uso.png}
+\end{figure}
+
 \paragraph{Operatore}
 \begin{enumerate}
   \item Inserimento di una nuova Convenzione/Contributo\\
   
   Percorso base:
-  L'operatore una volta effettuato il login clicca su ``Crea una convenzione/contributo''; viene visualizzata una schermata suddivisa in varie schede,
+  l'operatore, una volta effettuato il login, clicca su ``Crea una convenzione/contributo''; viene visualizzata una schermata suddivisa in varie schede,
   ognuna corrispondente ad un passo della procedura. E' possibile passare da una vista all'altra mediante i pulsanti ``Avanti'' e ``Indietro''. I passi sono:
   \begin{enumerate}
     \item Inserimento dei dati della convenzione/contributo\\
       
-      Viene presentata una schermata in cui sono elencati tutti i campi necessari per la definizione di una convenzione/contributo, 
+      In questa scheda sono elencati tutti i campi necessari per la definizione di una convenzione/contributo, 
       che l'Operatore deve compilare. Tali campi sono:
       \begin{itemize}
 	\item Il titolo
@@ -17,12 +24,10 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
 	\item L'UAR
 	\item La tipologia
 	\item Il responsabile scientifico\\
-	  Per riempire questo campo, bisogna scegliere il responsabile dal rispettivo menù a tendina. 
-	  Se l'utente non è presente all'interno della lista, è possibile crearne uno nuovo cliccando su "Aggiungi".
+	  Per selezionare un responsabile scientifico è possibile usare l'apposito menù a tendina o, in alternativa, qualora la persona cercata non sia nell'elenco, aggiungerla cliccando sul pulsante ``Aggiungi''.
 	\item Il referente
 	\item La dittà\\
-	   Per riempire questo campo, bisogna scegliere il responsabile dal rispettivo menù a tendina. 
-	  Se l'utente non è presente all'interno della lista, è possibile crearne uno nuovo cliccando su "Aggiungi".
+	  Per selezionare una dittà si può usare l'apposito menù a tendina o, se la dittà cercata non fosse presente nell'elenco, aggiungerne una nuova cliccando sul pulsante ``Aggiungi''.
 	\item Il nome del progetto CIA
 	\item Il Repertorio
 	\item Il totale imponibile
@@ -32,9 +37,11 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
 	\item La data di scadenza
       \end{itemize}
       
+      Nota : i campi riguardanti l'Iva non sono presenti nel caso del contributo.
+      
     \item Inserimento della tabella di ripartizione\\
      
-      Viene presentata una schermata in cui sono presenti le voci della tabella di ripartizione. L'Operatore può modificare alcuni valori percentuali 
+      Questa scheda contiene le voci della tabella di ripartizione. L'Operatore può modificare alcuni valori percentuali 
       in base ai quali dividere l'importo totale. Le voci non modificabili sono calcolate in relazione ai campi modificabili facendo riferimento alle norme di ateneo. Le voci modificabili sono:
       \begin{itemize}
 	\item ``Personale'': stabilisce la quota destinata al personale; è l'unico campo principale che l'operatore può modificare e in base al quale vengono calcolati gli altri.
@@ -43,22 +50,15 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
     \item Gestione delle rate\\
       
       Questo passo della procedura è facoltativo: viene data la possibilità all'operatore di inserire delle rate per la convenzione/contributo
-      che sta creando. Per i dettagli riquardo all'inserimento della rata si rimanda al corrispettivo caso d'uso. Una volta inserite una o più rate
+      che sta creando. Una volta inserite una o più rate
       queste vengono visualizzate in una tabella e l'Operatore
-      ha la possibilità di:
-      \begin{itemize}
-       \item  Modificare o visualizzare una rata; cliccando sui tasti ``Modifica'' o ``Visualizza'' che compaiono sulla destra, nella riga della tabella
-       corrispondente alla rata in questione, viene mostrata la schermata "Modifica/Visualizzazione di una rata"; questa è analoga a quella relativa all'inserimento
-       eccetto per il fatto che i campi	sono inizializzati al valore correntemente assegnato; nel caso della visualizzazione i campi non sono modificabili.
-			
-	\item Eliminare una rata cliccando sul tasto ``Elimina''. Viene chiesta conferma all'Operatore mediante una finestra di dialogo.
-
-      \end{itemize}
+      ha la possibilità di modificare,visualizzare,eliminare una rata cliccando sui tasti ``Modifica'',``Visualizza'' ed ``Elimina'' che compaiono sulla destra, nella riga della tabella
+       corrispondente alla rata in questione.Per i dettagli riquardo alle operazioni sulle rate si rimanda ai corrispettivi casi d'uso.
 
       
     \item Inserimento della documentazione relativa alla convenzione\\
 	  
-	  Viene presentata una schermata in cui appaiono i documenti allegati alla convenzione. L'Operatore può aggiungere o eliminare un documento 
+	  Questa scheda elenca i documenti allegati alla convenzione. L'Operatore può aggiungere o eliminare un documento 
 	  cliccando sugli appositi tasti. Premendo il tasto ``Salva'' la convenzione viene salvata e la procedura termina. Si ritorna alla schermata precedente.
   \end{enumerate}
 		 
@@ -71,32 +71,32 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
   \item Visualizzazione delle convenzioni/contributi\\
 
   Percorso base:
-  L'operatore clicca su ``Visualizza la lista delle convenzioni/contributi''; viene mostrata una lista delle convenzioni/contributi correntemente stipulate in 
+  l'operatore clicca su ``Visualizza contratti''; viene mostrata una lista delle convenzioni/contributi correntemente stipulate in 
   riferimento al dipartimento di afferenza dell'Operatore, con opportuni filtri 
   per agevolare la ricerca (tra cui un filtro per data di scadenza) e ordinabili secondo la data.
-  L'Operatore può selezionare una convenzione e compiere 3 azioni mediante gli appositi pulsanti, che appaiono sulla destra portando il mouse su 
+  L'Operatore può selezionare una convenzione e compiere 3 azioni, per cui si rimanda ai corrispettivi casi d'uso, mediante gli appositi pulsanti, che appaiono sulla destra portando il cursore su 
   una convenzione:
   \begin{itemize}
-   \item visualizzarla;
-   \item modificarla (si rimanda al rispettivo caso d'uso);
-   \item eliminarla.
+   \item visualizzarla
+   \item modificarla
+   \item eliminarla
   \end{itemize}		
 
   Percorso alternativo:
-  Si può tornare alla Home con l'apposito tasto.
+  Si può tornare alla pagina iniziale con l'apposito tasto.
  
   \item Modifica di una convenzione\\
   
   Percorso base:
-  L'Operatore a partire dalla schermata ``Lista delle Convezioni/Contributi'' clicca sul pulsante ``Modifica'' che appare sulla destra nella riga 
+  l'Operatore a partire dalla schermata ``Visualizza Contratti'' clicca sul pulsante ``Modifica'' che appare sulla destra nella riga 
   della tabella corrispondente alla convenzione/contributo desiderata. Viene visualizzata una schermata suddivisa in schede del tutto analoga a quella
-  descritta nel caso di creazione di una convenzione/contributo con la differenza che in questo caso è possibile spostarsi da una scheda all'altra
+  descritta nel caso della ``Creazione di una convenzione/contributo'' con la differenza che in questo caso è possibile spostarsi da una scheda all'altra
   cliccando sulla scheda stessa. Inoltre è presente la scheda aggiuntiva ``Riepilogo'' che contiene alcune informazioni di riepilogo come il residuo
   totale della convenzione/contributo o il totale fatturato.
-  L'Operatore effettua i cambiamenti desiderati e clicca sul pulsante ``Salva''.\\
+  L'Operatore effettua i cambiamenti desiderati quindi clicca sul pulsante ``Salva''.\\
 
   Percorso alternativo:
-  L'Operatore può cliccare sul tasto "Annulla" in qualsiasi momento per tornare alla schermata "Visualizzazione delle convenzioni" senza salvare le modifiche effettuate.
+  l'Operatore può cliccare sul tasto "Annulla" in qualsiasi momento per tornare alla schermata "Visualizzazione delle convenzioni" senza salvare le modifiche effettuate.
   Se l'Operatore clicca su "Salva" ma alcuni valori immessi non sono corretti, viene visualizzato un messaggio di errore e non si torna alla schermata "Visualizzazione delle
   convenzioni". I cambiamenti effettuati non vengono (ovviamente) salvati.
   
@@ -107,23 +107,62 @@ Di seguito elenchiamo i principali casi d'uso per ciascun tipo di utente che int
   
   
 \item Inserimento di una rata\\
-L'operatore può inerire una rata sia in fase di creazione della convenzione/contributo sia in fase di modifica; in entrambi i casi dopo aver raggiunto
+Percorso base:
+l'operatore può inserire una rata sia in fase di creazione della convenzione/contributo sia in fase di modifica; in entrambi i casi dopo aver raggiunto
 la scheda ``Rate'' l'Operatore clicca sul pulsante ``Aggiungi una rata''.  
 Viene visualizzata una finestra di dialogo suddivisa in varie schede,
-ognuna corrispondente ad un passo della procedura. E' possibile passare da una vista all'altra mediante i pulsanti "Avanti" e "Indietro". I passi sono:
+ognuna corrispondente ad un passo della procedura. E' possibile passare da una scheda all'altra mediante i pulsanti "Avanti" e "Indietro". I passi sono:
 \begin{enumerate}
   \item Inserimento dei dati della rata\\
   
   L'operatore inserisce i seguenti campi
     \begin{itemize}
-    \item ...
+    \item Importo
+    \item Iva
+    \item Data
+    \item Numero Reversale
+    \item Data Reversale
+    \item Numero di Sospeso
+    \item Numero di fatturato
+    \item Data fatturata
+    \item E'stata pagata la fattura?
+    \item Deve essere allegata la fattura?
+    \item Note
     \end{itemize}
+    
+   Nota : i campi riguardanti l'Iva non sono presenti nel caso del contributo.
+
+   
   \item Inserimento della tabella di ripartizione
   Il procedimento è del tutto analogo  a quello descritto nel caso d'uso "Inserimento della tabella di ripartizione" per l'inserimento di 
   una nuova convenzione/contributo. 
 \end{enumerate}
 
 Le modifiche vengono salvate cliccando sul pulsante "Salva". Si ritorna alla schermata precedente;
+
+Percorso alternativo:
+l'Operatore clicca sul pulsante ``Annulla'', viene chiusa la finestra di dialogo senza che la rata sia stata inserita.
+
+\item Modifica di una rata\\
+
+Percorso base:
+l'Operatore accede alla schermata ``Visualizza contratti'' cliccando sul pulsante apposito nella pagina iniziale, quindi seleziona la convenzione/contributo alla quale la rata appartiene e clicca sul pulsante ``Modifica'' che compare
+all'interno della riga selezionata. Viene così visualizzata la schermata ``Modifica di una convenzione/contributo'', l'Operatore raggiunge la scheda ``rate'' e clicca sul pulsante ``Modifica'' che compare selezionando la riga della tabella
+corrispondente alla rata desiderata. Viene visualizzata una finestra di dialogo composta di varie schede analoghe a quelle descritte nel caso dell'inserimento. E' possibile passare da una scheda all'altra cliccando su di esse.
+Dopo avere effettuato le modifiche richieste l'Operatore clicca sul pulsante ``Salva'', la convenzione/contributo viene aggiornata e viene visualizzata la schermata precedente.
+
+Percorso alternativo:
+l'Operatore clicca sul pulsante ``Annulla'', le modifiche vengono scartate e si torna alla schermata precedente.
+
+\item Visualizzazione di una rata
+
+Una volta raggiunta la scheda ``rate'' relativa alla convenzione/contributo di interesse l'Operatore, dopo aver selezionato la rata di interesse, clicca sul pulsante ``Visualizza''. Viene presentata una finestra di dialogo analoga a quella descritta nel caso della modifica 
+con la differenza che i campi non sono modificabili. E' possibile tornare alla schermata precedente cliccando sul pulsante ``Indietro''.
+
+\item Eliminazione di una rata
+Una volta raggiunta la scheda ``rate'' relativa alla convenzione/contributo di interesse l'Operatore, dopo aver selezionato la rata di interesse, clicca sul pulsante ``Elimina'; appare una finestra di dialogo che chiede di confermare
+l'eliminazione, l'Operatore clicca ''Sì'', la rata viene eliminata.
+
 
 
 \end{enumerate}
@@ -159,7 +198,18 @@ Le modifiche vengono salvate cliccando sul pulsante "Salva". Si ritorna alla sch
 
 \paragraph{Tempo}
 \begin{enumerate}
- \item Notifica delle scadenze
+ \item Notifica delle scadenze\\
+    Ad intervalli periodici stabiliti, i docenti che hanno convenzioni/contributi attive con rate in scadenza ravvicinata, vengono avvertiti tramite posta elettronica.
+  
+ 
+ \item Notifica della creazione di una nuova convenzione/contributo\\
+    Al momento del completamento della creazione di una nuova convenzione/contributo viene inviata una email all'indirizzo di posta elettronico del responsabile scientifico indicato per la convenzione/contributo. Tale email contiene
+    le informazioni principali che caratterizzano la convenzione/contributo.
+  
+  
+ \item Notifica della chiusura di una convenzione/contributo\\
+    Al momento della chiusura di una convenzione/contributo (ovvero quando il fatturato è pari all'importo totale) viene inviata una email all'indirizzo di posta elettronico del responsabile scientifico che notica la chiusura della
+    convenzione/contributo riportando alcuni dati di questa.
 \end{enumerate}
 
 
