--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -25,6 +25,7 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
+\input{jpa.tex}
 \section{CDI}
 \section{JSF}
 \chapter{Utilizzo}
