--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -2,6 +2,32 @@
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 \usepackage{graphicx}
+\usepackage[hidelinks]{hyperref}
+\usepackage{listings}
+\usepackage{color}
+\usepackage{graphicx}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true
+  tabsize=3,
+  moredelim=[is][\textcolor{gray}]{&&}{&&}
+}
 
 % Title Page
 \title{Analisi e sviluppo di una web application \\
@@ -12,7 +38,6 @@ per l'amministrazione di attività di trasferimento tecnologico}
 
 \begin{document}
 \maketitle
-
 
 \begin{abstract}
 \end{abstract}
@@ -25,12 +50,13 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
-\input{jpa.tex}
 \section{CDI}
 \section{JSF}
+\section{Deltaspike}
+\input{Deltaspike}
 \chapter{Utilizzo}
 
 
 
 
-\end{document}          
+\end{document}       
