tesi + un po' di roba che evidentemente non avevo pushato

--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -51,7 +51,9 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \chapter{Tecnologie}
 \section{JPA}
 \section{CDI}
+\input{CDI}
 \section{JSF}
+\input{JSF}
 \section{Deltaspike}
 \input{Deltaspike}
 \chapter{Utilizzo}
