--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -50,7 +50,9 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
+\input{jpa}
 \section{CDI}
+\label{cdi}
 \section{JSF}
 \section{Deltaspike}
 \input{Deltaspike}
