--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -6,7 +6,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
   \caption{Diagramma dei casi d'uso dell'Operatore}
   \label{use_case_diag_operator}
   \centering
-    \includegraphics[width=1\textwidth]{images/casi_uso_operatore.png}
+    \includegraphics[width=1\textwidth]{images/casi_uso_operatore.eps}
 \end{figure}
 
 \begin{enumerate}
@@ -179,7 +179,7 @@ I casi d'uso del Docente sono rappresentati in figura \ref{use_case_diag_teacher
   \caption{Diagramma dei casi d'uso del Docente}
   \label{use_case_diag_teacher}
   \centering
-    \includegraphics[width=1\textwidth]{images/casi_uso_docente.png}
+    \includegraphics[width=0.8\textwidth]{images/casi_uso_docente.eps}
 \end{figure}
 
 \begin{enumerate}
@@ -215,7 +215,7 @@ I casi d'uso del Tempo sono rappresentati in figura \ref{use_case_diag_teacher}
   \caption{Diagramma dei casi d'uso del Tempo}
   \label{use_case_diag_time}
   \centering
-    \includegraphics[width=0.8\textwidth]{images/casi_uso_tempo.png}
+\includegraphics[width = 0.5\textwidth]{images/casi_uso_tempo.eps}
 \end{figure}
 \begin{enumerate}
  \item Notifica delle scadenze\\
