--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -46,9 +46,12 @@ per l'amministrazione di attività di trasferimento tecnologico}
 
 \chapter{Introduzione}
 \chapter{Analisi}
+\section{Modello di dominio}
+\input{modello_business}
 \section{Casi d'uso}
 \input{casi_uso}
 \chapter{Tecnologie}
+\section{JBoss}
 \section{JPA}
 \input{jpa}
 \section{CDI}
