--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -6,6 +6,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{epstopdf}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -46,12 +47,10 @@ per l'amministrazione di attività di trasferimento tecnologico}
 
 \chapter{Introduzione}
 \chapter{Analisi}
-\section{Modello di dominio}
-\input{modello_business}
+\input{modello_utenti}
 \section{Casi d'uso}
 \input{casi_uso}
 \chapter{Tecnologie}
-\section{JBoss}
 \section{JPA}
 \input{jpa}
 \section{CDI}
