--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -47,6 +47,7 @@ per l'amministrazione di attività di trasferimento tecnologico}
 
 \chapter{Introduzione}
 \chapter{Analisi}
+\input{modello_business}
 \input{modello_utenti}
 \section{Casi d'uso}
 \input{casi_uso}
