--- a/Docs/Tesi/modello_business.tex
+++ b/Docs/Tesi/modello_business.tex
@@ -1,6 +1,6 @@
 \subsubsection{Business}
 
-...discorsi generali...
+In figura \ref{model_business} è mostrato il modello di business. \\
 
 L'Entità principale del modello è \texttt{Contract}, è una classe astratta che viene implementata da \texttt{Agreement} e \texttt{Funding}.
 \texttt{Agreement}, che rappresenta una Convenzione, e \texttt{Funding} che rappresenta il Contributo differiscono fra loro solo per i campi dedicati all'Iva. La classe \texttt{Contract} possiede
