--- a/Docs/Tesi/modello_business.tex
+++ b/Docs/Tesi/modello_business.tex
@@ -21,7 +21,7 @@ per convenzioni e contributi. \texttt{Installment} ha inoltre un riferimento a \
 
 
 \begin{figure}[h]
-  \caption{Diagramma delle classi}
+  \caption{Modello di business}
   \label{model_business}
   \centering
     \includegraphics[width=1\textwidth]{images/modello_business.eps}
