--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -63,7 +63,15 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \input{JSF}
 \section{Deltaspike}
 \input{Deltaspike}
+\section{Altre librerie}
+\input{altre_librerie}
 \chapter{Utilizzo}
+\chapter{Dietro le quinte}
+\section{Login}
+\input{login}
+\section{Lista convenzioni}
+\input{lista_interfaccia}
+\input{lista_business}
 
 
 
